--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,11 @@ services:
     command: -jar DynamoDBLocal.jar -inMemory -sharedDb
     ports:
       - "8002:8000"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000"]
+      interval: 5s
+      timeout: 2s
+      retries: 10
   
   dynamodb-init:
     image: amazon/aws-cli
@@ -24,7 +29,6 @@ services:
            --key-schema AttributeName=userId,KeyType=HASH AttributeName=slotId,KeyType=RANGE \
            --billing-mode PAY_PER_REQUEST \
            --endpoint-url http://dynamodb-local:8000 \
-           --region eu-west-1 \
          || echo 'Table already exists'"
       ]
   rabbitmq:
