--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,49 @@
 version: '3.8'
 services:
+  postgres:
+    image: postgres:15
+    environment:
+      POSTGRES_USER: slots_user
+      POSTGRES_PASSWORD: secret_pass
+      POSTGRES_DB: slots_db
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U slots_user"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
   dynamodb-local:
     image: amazon/dynamodb-local
     command: -jar DynamoDBLocal.jar -inMemory -sharedDb
     ports:
       - "8002:8000"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000"]
-      interval: 5s
-      timeout: 2s
-      retries: 10
-  
   dynamodb-init:
     image: amazon/aws-cli
     depends_on:
-      dynamodb-local:
-        condition: service_started  
+      - dynamodb-local
     environment:
-      AWS_ACCESS_KEY_ID:      dummy
-      AWS_SECRET_ACCESS_KEY:  dummy
-      AWS_DEFAULT_REGION:     eu-west-1 
-    entrypoint:
-      [
-        "sh","-c",
-        "aws dynamodb create-table \
+      AWS_ACCESS_KEY_ID:     dummy
+      AWS_SECRET_ACCESS_KEY: dummy
+      AWS_DEFAULT_REGION:    eu-west-1
+    entrypoint: [
+      "sh", "-c",
+      "echo \"⏳ Waiting for DynamoDB to be available…\"; \
+       until aws dynamodb list-tables --endpoint-url http://dynamodb-local:8000 | grep -q TimeSlots; do \
+         echo \"⏳ Creating TimeSlots table (or waiting)…\"; \
+         aws dynamodb create-table \
            --table-name TimeSlots \
-           --attribute-definitions AttributeName=userId,AttributeType=S AttributeName=slotId,AttributeType=S \
-           --key-schema AttributeName=userId,KeyType=HASH AttributeName=slotId,KeyType=RANGE \
+           --attribute-definitions AttributeName=userEmail,AttributeType=S AttributeName=slotId,AttributeType=S \
+           --key-schema AttributeName=userEmail,KeyType=HASH AttributeName=slotId,KeyType=RANGE \
            --billing-mode PAY_PER_REQUEST \
-           --endpoint-url http://dynamodb-local:8000 \
-         || echo 'Table already exists'"
-      ]
+           --endpoint-url http://dynamodb-local:8000 || true; \
+         sleep 5; \
+       done; \
+       echo \"✅ Таблиця TimeSlots готова!\""
+    ]
+    restart: "no"
   rabbitmq:
     image: rabbitmq:3-management
     environment:
@@ -84,6 +97,8 @@ services:
       DYNAMODB_ENDPOINT: http://dynamodb-local:8000
     depends_on:
       dynamodb-init:
-        condition: service_started    
+        condition: service_completed_successfully
     ports:
       - "8001:8001"
+volumes:
+  pgdata:
