--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,5 @@
 version: '3.8'
 services:
-  postgres:
-    image: postgres:15
-    environment:
-      POSTGRES_USER: slots_user
-      POSTGRES_PASSWORD: secret_pass
-      POSTGRES_DB: slots_db
-    ports:
-      - "5432:5432"
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U slots_user"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
   dynamodb-local:
     image: amazon/dynamodb-local
     command: -jar DynamoDBLocal.jar -inMemory -sharedDb
@@ -40,8 +25,22 @@ services:
            --billing-mode PAY_PER_REQUEST \
            --endpoint-url http://dynamodb-local:8000 || true; \
          sleep 5; \
-       done; \
-       echo \"✅ Таблиця TimeSlots готова!\""
+      done; \
+      echo \"✅ Таблиця TimeSlots готова!\"; \
+      until aws dynamodb list-tables --endpoint-url http://dynamodb-local:8000 | grep -q Reservations; do \
+       echo \"⏳ Creating Reservations…\"; \
+       aws dynamodb create-table --table-name Reservations \
+         --attribute-definitions \
+           AttributeName=participantEmail,AttributeType=S \
+           AttributeName=creatorEmail,AttributeType=S \
+         --key-schema \
+           AttributeName=participantEmail,KeyType=HASH \
+           AttributeName=creatorEmail,KeyType=RANGE \
+         --billing-mode PAY_PER_REQUEST \
+         --endpoint-url http://dynamodb-local:8000 || true; \
+       sleep 5; \
+     done; \
+     echo \"✅ Reservations готова!\""
     ]
     restart: "no"
   rabbitmq:
@@ -125,7 +124,15 @@ services:
       - .:/app
     ports:
       - "8005:8005"
+    environment:
+      AWS_ACCESS_KEY_ID:      dummy
+      AWS_SECRET_ACCESS_KEY:  dummy
+      AWS_REGION: eu-west-1
+      SLOTS_TABLE: TimeSlots
+      RESERVATIONS_TABLE: Reservations
+      DYNAMODB_ENDPOINT: http://dynamodb-local:8000
     depends_on:
-      - postgres
+      dynamodb-init:
+        condition: service_completed_successfully
 volumes:
   pgdata:
